
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
void
j2date(int jd, int *year, int *month, int *day)
{
 unsigned int julian;
 unsigned int quad;
 unsigned int extra;
 int y;

 julian = jd;
 julian += 32044;
 quad = julian / 146097;
 extra = (julian - quad * 146097) * 4 + 3;
 julian += 60 + quad * 3 + extra / 146097;
 quad = julian / 1461;
 julian -= quad * 1461;
 y = julian * 4 / 1461;
 julian = ((y != 0) ? (julian + 305) % 365 : (julian + 306) % 366) + 123;
 y += quad * 4;
 *year = y - 4800;
 quad = julian * 2141 / 65536;
 *day = julian - 7834 * quad / 256;
 *month = (quad + 10) % 12 + 1;

 return;
}
